<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InfoActivity">

    <TextView
            android:text="@string/tvWordTranslate"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:id="@+id/tvWordTranslate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.043"
            android:gravity="center"
            android:textSize="24sp"
            android:focusable="false" />

    <Button
            android:text="@string/btnSpeak"
            android:layout_width="143dp"
            android:layout_height="49dp"
            android:id="@+id/btnSpeak"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.839"
            app:layout_constraintVertical_bias="0.891" />

    <Button
            android:text="@string/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.208"
            app:layout_constraintVertical_bias="0.89" />

    <TextView
            android:layout_width="282dp"
            android:layout_height="445dp"
            android:id="@+id/tvWordInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintVertical_bias="0.318"
            android:focusable="false"
            android:inputType="text|textMultiLine" />

    <TextView
            android:layout_width="262dp"
            android:layout_height="43dp"
            android:id="@+id/tvSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            android:hint="@string/tvSearch"
            app:layout_constraintHorizontal_bias="0.214" />

    <Button
            android:text="@string/btnSearch"
            android:layout_width="101dp"
            android:layout_height="40dp"
            android:id="@+id/btnSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.948"
            app:layout_constraintVertical_bias="0.801" />
</androidx.constraintlayout.widget.ConstraintLayout>